--- a/research/01_data.ipynb
+++ b/research/01_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -19,14 +19,6 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\KAVIYA\\Desktop\\Text-Summarizer-Project\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\KAVIYA\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\IPython\\core\\magics\\osm.py:417: UserWarning: This is now an optional IPython functionality, setting dhist requires you to install the `pickleshare` library.\n",
-      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
      ]
     }
    ],
@@ -36,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +37,7 @@
        "'c:\\\\Users\\\\KAVIYA\\\\Desktop\\\\Text-Summarizer-Project'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,18 +158,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-07-08 11:34:45,436: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-07-08 11:34:45,441: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-07-08 11:34:45,444: INFO: common: created directory at: artifacts]\n",
-      "[2024-07-08 11:34:45,446: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2024-07-08 11:34:47,641: INFO: 1434958058: artifacts/data_ingestion/data.zip download! with following info: \n",
+      "[2024-07-08 12:15:12,931: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-07-08 12:15:12,935: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-07-08 12:15:12,937: INFO: common: created directory at: artifacts]\n",
+      "[2024-07-08 12:15:12,938: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-07-08 12:15:14,412: INFO: 1434958058: artifacts/data_ingestion/data.zip download! with following info: \n",
       "Connection: close\n",
       "Content-Length: 7903594\n",
       "Cache-Control: max-age=300\n",
@@ -190,17 +182,17 @@
       "X-XSS-Protection: 1; mode=block\n",
       "X-GitHub-Request-Id: 36ED:DA67C:1B945F:26DA94:668B817C\n",
       "Accept-Ranges: bytes\n",
-      "Date: Mon, 08 Jul 2024 06:04:45 GMT\n",
+      "Date: Mon, 08 Jul 2024 06:45:12 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-hyd1100026-HYD\n",
-      "X-Cache: MISS\n",
+      "X-Served-By: cache-hyd1100034-HYD\n",
+      "X-Cache: HIT\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1720418685.684952,VS0,VE744\n",
+      "X-Timer: S1720421112.968064,VS0,VE267\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: ecb292e7e1d257cc1c0e47e6c71837037917282a\n",
-      "Expires: Mon, 08 Jul 2024 06:09:45 GMT\n",
+      "X-Fastly-Request-ID: fa63196c9bd78ac026708672e8aef5a7f246ea85\n",
+      "Expires: Mon, 08 Jul 2024 06:50:12 GMT\n",
       "Source-Age: 0\n",
       "\n",
       "]\n"
