--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'c:\\\\Users\\\\KAVIYA\\\\Desktop\\\\Text-summarizer-project\\\\research'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,25 +31,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\KAVIYA\\Desktop\\Text-Summarizer-Project\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\KAVIYA\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\IPython\\core\\magics\\osm.py:417: UserWarning: This is now an optional IPython functionality, setting dhist requires you to install the `pickleshare` library.\n",
+      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
+     ]
+    }
+   ],
    "source": [
-    "os.chdir(\"../\")"
+    "%cd c:\\Users\\KAVIYA\\Desktop\\Text-Summarizer-Project"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\KAVIYA\\\\Desktop\\\\Text-summarizer-project'"
+       "'c:\\\\Users\\\\KAVIYA\\\\Desktop\\\\Text-Summarizer-Project'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,12 +145,307 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "None of PyTorch, TensorFlow >= 2.0, or Flax have been found. Models won't be available and only tokenizers, configuration and file/data utilities can be used.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from src.textSummariser.logging import logger\n",
+    "from transformers import AutoTokenizer\n",
+    "from datasets import load_from_disk,load_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from src.textSummariser.logging import logger"
+    "class DataTransformation:\n",
+    "    def __init__(self, config: DataTransformationConfig):\n",
+    "        self.config = config\n",
+    "        self.tokenizer = AutoTokenizer.from_pretrained(config.tokenizer_name)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    def convert_examples_to_features(self,example_batch):\n",
+    "        input_encodings = self.tokenizer(example_batch['dialogue'] , max_length = 1024, truncation = True )\n",
+    "        \n",
+    "        with self.tokenizer.as_target_tokenizer():\n",
+    "            target_encodings = self.tokenizer(example_batch['summary'], max_length = 128, truncation = True )\n",
+    "            \n",
+    "        return {\n",
+    "            'input_ids' : input_encodings['input_ids'],\n",
+    "            'attention_mask': input_encodings['attention_mask'],\n",
+    "            'labels': target_encodings['input_ids']\n",
+    "        }\n",
+    "    \n",
+    "\n",
+    "    def convert(self):\n",
+    "        dataset_samsum = load_from_disk(self.config.data_path)\n",
+    "        dataset_samsum_pt = dataset_samsum.map(self.convert_examples_to_features, batched = True)\n",
+    "        dataset_samsum_pt.save_to_disk(os.path.join(self.config.root_dir,\"samsum_dataset\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: sentencepiece in c:\\users\\kaviya\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.2.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 24.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install sentencepiece\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: sentencepiece in c:\\users\\kaviya\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.2.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 24.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install sentencepiece"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting protobuf\n",
+      "  Downloading protobuf-5.27.2-cp310-abi3-win_amd64.whl.metadata (592 bytes)\n",
+      "Downloading protobuf-5.27.2-cp310-abi3-win_amd64.whl (426 kB)\n",
+      "   ---------------------------------------- 0.0/426.9 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.0/426.9 kB ? eta -:--:--\n",
+      "    --------------------------------------- 10.2/426.9 kB ? eta -:--:--\n",
+      "   -- ------------------------------------ 30.7/426.9 kB 330.3 kB/s eta 0:00:02\n",
+      "   --- ----------------------------------- 41.0/426.9 kB 326.8 kB/s eta 0:00:02\n",
+      "   ---------- --------------------------- 112.6/426.9 kB 656.4 kB/s eta 0:00:01\n",
+      "   ----------------------- ---------------- 245.8/426.9 kB 1.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 368.6/426.9 kB 1.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 426.9/426.9 kB 1.5 MB/s eta 0:00:00\n",
+      "Installing collected packages: protobuf\n",
+      "Successfully installed protobuf-5.27.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 24.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install protobuf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pip in c:\\users\\kaviya\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (24.0)\n",
+      "Collecting pip\n",
+      "  Downloading pip-24.1.2-py3-none-any.whl.metadata (3.6 kB)\n",
+      "Downloading pip-24.1.2-py3-none-any.whl (1.8 MB)\n",
+      "   ---------------------------------------- 0.0/1.8 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.0/1.8 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 0.0/1.8 MB ? eta -:--:--\n",
+      "    --------------------------------------- 0.0/1.8 MB 262.6 kB/s eta 0:00:07\n",
+      "   - -------------------------------------- 0.1/1.8 MB 438.9 kB/s eta 0:00:04\n",
+      "   ---- ----------------------------------- 0.2/1.8 MB 985.7 kB/s eta 0:00:02\n",
+      "   ------- -------------------------------- 0.3/1.8 MB 1.4 MB/s eta 0:00:02\n",
+      "   ------------ --------------------------- 0.6/1.8 MB 2.1 MB/s eta 0:00:01\n",
+      "   ----------------- ---------------------- 0.8/1.8 MB 2.5 MB/s eta 0:00:01\n",
+      "   ----------------------- ---------------- 1.1/1.8 MB 2.8 MB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 1.3/1.8 MB 3.1 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 1.6/1.8 MB 3.5 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  1.8/1.8 MB 3.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 1.8/1.8 MB 3.5 MB/s eta 0:00:00\n",
+      "Installing collected packages: pip\n",
+      "  Attempting uninstall: pip\n",
+      "    Found existing installation: pip 24.0\n",
+      "    Uninstalling pip-24.0:\n",
+      "      Successfully uninstalled pip-24.0\n",
+      "Successfully installed pip-24.1.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install --upgrade pip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-07-08 12:27:55,331: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-07-08 12:27:55,333: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-07-08 12:27:55,335: INFO: common: created directory at: artifacts]\n",
+      "[2024-07-08 12:27:55,337: INFO: common: created directory at: artifacts/data_transformation]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c2e709d97a9246c48b703dc79f4141b6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/14732 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\KAVIYA\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\transformers\\tokenization_utils_base.py:4016: UserWarning: `as_target_tokenizer` is deprecated and will be removed in v5 of Transformers. You can tokenize your labels by using the argument `text_target` of the regular `__call__` method (either in the same call as your input texts if you use the same keyword arguments, or in a separate call.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "178cd364f1a946d49b47f1d26366a85d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/819 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "21d639ff4b824fe099c0a5463bf6d335",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/818 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3cda9eb34c7145d1a820a76946fb5cd0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Saving the dataset (0/1 shards):   0%|          | 0/14732 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "123444d791954adda8d6235692584738",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Saving the dataset (0/1 shards):   0%|          | 0/819 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5022470e5f8c4299a76c261703bcc868",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Saving the dataset (0/1 shards):   0%|          | 0/818 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_transformation_config = config.get_data_transformation_config()\n",
+    "    data_transformation = DataTransformation(config=data_transformation_config)\n",
+    "    data_transformation.convert()\n",
+    "except Exception as e:\n",
+    "    raise e"
    ]
   }
  ],
